# NovaSec

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
config/: novasec.yaml  plugins.yaml
config/profiles/: aggressive.yaml  bugbounty.yaml  stealth.yaml
docs/: configuration.md  getting_started.md  index.md  plugin_development.md
novasec/: __init__.py  main.py
novasec/cli/: __init__.py  app.py
novasec/cli/commands/: __init__.py  config.py  plugin.py  recon.py  report.py  scan.py
novasec/cli/middleware/: __init__.py  auth.py  output.py
novasec/config/: __init__.py  defaults.py  loader.py  schema.py  validator.py
novasec/core/: __init__.py  container.py  context.py  events.py  exceptions.py  interfaces.py  registry.py
novasec/domain/: __init__.py
novasec/domain/exploit/: __init__.py  executor.py  payloads.py
novasec/domain/recon/: __init__.py  dns.py  osint.py  port.py  subdomain.py  whois.py
novasec/domain/recon/wordlists/: subdomains-100.txt
novasec/domain/scan/: __init__.py  network.py  ssl.py  vuln.py  web.py
novasec/domain/threat/: __init__.py  cve.py  intel.py  ioc.py
novasec/infrastructure/: __init__.py
novasec/infrastructure/apis/: __init__.py  censys.py  nvd.py  shodan.py  virustotal.py
novasec/infrastructure/dns/: __init__.py  resolver.py
novasec/infrastructure/http/: __init__.py  client.py  proxy.py
novasec/infrastructure/storage/: __init__.py  database.py  local.py
novasec/infrastructure/subprocess/: __init__.py  runner.py
novasec/logging/: __init__.py  audit.py  formatters.py  handlers.py  setup.py
novasec/plugins/: __init__.py  base.py  loader.py  validator.py
novasec/plugins/builtin/: __init__.py
novasec/plugins/builtin/ffuf_wrapper/: __init__.py  fuzzer.py  plugin.yaml
novasec/plugins/builtin/nikto_wrapper/: __init__.py  plugin.yaml  scanner.py
novasec/plugins/builtin/nmap_wrapper/: __init__.py  plugin.yaml  scanner.py
novasec/plugins/builtin/nuclei_wrapper/: __init__.py  (+2 more)
novasec/reporting/: __init__.py  base.py  models.py
novasec/reporting/formatters/: __init__.py  csv_formatter.py  html_formatter.py  json_formatter.py  markdown_formatter.py  pdf_formatter.py
novasec/reporting/templates/: base.html.j2  executive.html.j2  technical.html.j2
novasec/utils/: __init__.py  async_utils.py  crypto.py  decorators.py  file.py  network.py  text.py
plugins_external/: README.md
scripts/: install.sh  lint.sh
tests/: __init__.py  conftest.py
tests/fixtures/: mock_scan_results.json  sample_config.yaml
tests/integration/: __init__.py  test_cli_recon.py
tests/unit/: __init__.py  test_config.py  test_plugin_loader.py  test_registry.py
tests/unit/domain/: __init__.py  test_recon.py  test_scan.py
tests/unit/reporting/: __init__.py  test_json_formatter.py
