[tool.poetry]
name = "novasec"
version = "1.0.0"
description = "NovaSec — Modular, production-grade cybersecurity CLI framework for security engineers, SOC analysts, and bug bounty hunters."
authors = ["NovaSec Team <team@novasec.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/novasec/novasec"
repository = "https://github.com/novasec/novasec"
documentation = "https://docs.novasec.dev"
keywords = ["cybersecurity", "penetration-testing", "recon", "vulnerability-scanner", "kali-linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
packages = [{ include = "novasec" }]

[tool.poetry.scripts]
novasec = "novasec.main:app"

[tool.poetry.dependencies]
python = "^3.12"

# CLI & Terminal UI
typer = { version = ">=0.12", extras = ["all"] }
rich = ">=13.0"

# Configuration & Validation
pydantic = ">=2.6"
pydantic-settings = ">=2.2"
pyyaml = ">=6.0"

# Networking & Security
httpx = { version = ">=0.27", extras = ["http2"] }
dnspython = ">=2.6"
python-whois = ">=0.9"
cryptography = ">=42.0"

# Tool Wrappers
python-nmap = ">=0.7.1"

# Storage
sqlmodel = ">=0.0.18"
aiofiles = ">=23.0"

# Reporting
jinja2 = ">=3.1"
weasyprint = ">=62.0"
markdown = ">=3.6"

# Logging
structlog = ">=24.0"

# Utilities
tenacity = ">=8.3"
click = ">=8.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
respx = ">=0.21"
factory-boy = ">=3.3"
faker = ">=25.0"
ruff = ">=0.4"
mypy = ">=1.10"
pre-commit = ">=3.7"
mkdocs-material = ">=9.5"
types-pyyaml = ">=6.0"
types-aiofiles = ">=23.0"
types-markdown = ">=3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["novasec", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PTH", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["novasec"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=novasec --cov-report=term-missing --cov-report=html -v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["novasec"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
